Adjust the card width for mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
   <body class="font-defaultFont text-defaultFontSize bg-mainBg">
     <div class="w-full h-screen flex items-center justify-center">
       <!-- Card -->
-      <article class="bg-cardBg max-w-[350px] h-[596px] p-6 rounded-[15px]">
+      <article
+        class="bg-cardBg w-[350px] h-[596px] p-6 rounded-[15px] sm:w-[327px]"
+      >
         <!-- Image -->
         <div class="relative rounded-lg overflow-hidden group cursor-pointer">
           <img src="/public/images/image-equilibrium.jpg" alt="glass cube" />
