--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/public/styles.css" />
+    <link rel="stylesheet" href="stylesheet.css" />
     <link
       rel="shortcut icon"
       href="/public/images/favicon-32x32.png"
@@ -26,16 +26,12 @@
       >
         <!-- Image -->
         <div class="relative rounded-lg overflow-hidden group cursor-pointer">
-          <img src="/public/images/image-equilibrium.jpg" alt="glass cube" />
+          <img src="images/image-equilibrium.jpg" alt="glass cube" />
           <div
             class="absolute top-0 left-0 right-0 bottom-0 bg-accent/[.5] flex items-center justify-center invisible group-hover:visible"
           >
             <div>
-              <img
-                src="/public/images/icon-view.svg"
-                alt="eye icon"
-                class="z-40"
-              />
+              <img src="images/icon-view.svg" alt="eye icon" class="z-40" />
             </div>
           </div>
         </div>
@@ -53,16 +49,13 @@
           <div class="flex justify-between items-center mb-6">
             <div class="flex gap-2 items-center">
               <div>
-                <img
-                  src="/public/images/icon-ethereum.svg"
-                  alt="icon-ethereum"
-                />
+                <img src="images/icon-ethereum.svg" alt="icon-ethereum" />
               </div>
               <span class="text-base text-accent">0.041 ETH</span>
             </div>
             <div class="flex gap-2 items-center">
               <div>
-                <img src="/public/images/icon-clock.svg" alt="icon-clock" />
+                <img src="images/icon-clock.svg" alt="icon-clock" />
               </div>
               <span class="text-base text-softBlue">3 days left</span>
             </div>
@@ -74,7 +67,7 @@
             class="relative w-[33px] h-[33px] rounded-full border-2 border-white overflow-hidden"
           >
             <img
-              src="/public/images/image-avatar.png"
+              src="images/image-avatar.png"
               alt="profile picture of a male"
             />
           </div>
